test/libyul/yulSyntaxTests/invalid_type.yul
{
    let x: invalidType
}
// ====
// dialect: evmTyped
// ----
// TypeError 5473: (10-24): "invalidType" is not a valid type (user defined types are not yet supported).
